fix: remove extra spaces in css

--- a/blocks/btn/_style/btn_style_glass.css
+++ b/blocks/btn/_style/btn_style_glass.css
@@ -1,3 +1,3 @@
 .btn_style_glass {
-  border: 1px solid #fff
+  border: 1px solid #fff;
 }
